<resources>
    <string name="app_name">Ideat app</string>
    <string name="getting_healthier">Getting Healthier</string>
    <string name="subjudul">With IDEAT you can more easily manage\ncalories in food to maintain a healthy \nlifestyle</string>
    <string name="get_started">GET STARTED</string>
    <string name="imagelogo">imageLogo</string>
    <string name="gambar_sesi_pertama">gambar sesi pertama</string>
    <string name="welcome">Welcome To IDEAT</string>
    <string name="create_an_account_or_login_to_start_exploring">create an account or Login to start exploring</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="gambar_login">gambar login</string>
    <string name="title_login">Please Enter an Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="create_an_account">Create an Account</string>
    <string name="gambar_register">Gambar Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="history">History</string>
    <string name="foto_makanan">foto makanan</string>
    <string name="title_activity_bot_nav">BotNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="hidup_sehat_dengan_menjaga_pola_makan">Hidup Sehat dengan Menjaga Pola Makan</string>
    <string name="kalori_makanan">kalori makanan</string>
    <string name="tanggal_scan_makanan">tanggal scan makanan</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="history_link">history link</string>
    <string name="scanner">Scanner</string>
    <string name="setting">Setting</string>
    <string name="hitung_nilai_kalori">Hitung Nilai Kalori</string>
    <string name="galeri">galeri</string>
    <string name="camera">camera</string>
    <string name="jumlah_kalori">Jumlah Kalori</string>
    <string name="tanggal_history">Tanggal History</string>
    <string name="nama_makanan_hasil_scan">Nama Makanan Hasil Scan</string>
    <string name="waktu_riwayat_scan">waktu riwayat scan</string>
    <string name="icon_edit_profile">Icon Edit Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="halaman_akun">halaman akun</string>
    <string name="gambar_profile">gambar profile</string>
    <string name="data_profile">Data Profile</string>
    <string name="logout">Logout</string>
    <string name="keamanan_akun">Keamanan Akun</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tanggal_lahir">Tanggal Lahir :</string>
    <string name="berat_badan">Berat Badan :</string>
    <string name="tinggi_badan">Tinggi Badan :</string>
    <string name="nama">Nama :</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="ubah_password">Ubah Password</string>
    <string name="password_lama">Password Lama :</string>
    <string name="masukkan_password_lama">Masukkan Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="masukkan_password_baru">Masukkan Password Baru</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="masukkan_ulang_password_baru">Masukkan Ulang Password Baru</string>
</resources>