<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.PasswordActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ubah_password"
                android:fontFamily="@font/poppinssemibold"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/password_lama"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/black"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/oldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="15sp"
                android:padding="8dp"
                android:paddingVertical="16dp"
                android:hint="@string/masukkan_password_lama"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey1"
                android:inputType="textPassword"
                android:autofillHints="name"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/password_baru"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/black"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="15sp"
                android:padding="8dp"
                android:paddingVertical="16dp"
                android:hint="@string/masukkan_password_baru"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey1"
                android:inputType="textPassword"
                android:autofillHints="name"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/konfirmasi_password"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/black"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="15sp"
                android:padding="8dp"
                android:paddingVertical="16dp"
                android:hint="@string/masukkan_ulang_password_baru"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey1"
                android:inputType="textPassword"
                android:autofillHints="name"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="8dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/hijau1"
                android:text="@string/konfirmasi"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>