<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.RegisterActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinssemibold"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registertext"
        android:layout_marginTop="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:hintEnabled="true"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/hijau1"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="25">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:maxLength="25"
            android:textColorHint="@color/hijau1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameInputLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:hintEnabled="true"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/hijau1"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="25">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:maxLength="25"
            android:textColorHint="@color/hijau1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInputLayout"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:hintEnabled="true"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/hijau1"
        app:endIconMode="password_toggle"
        app:counterEnabled="true"
        app:counterMaxLength="25">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/hijau1" />

    </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInputLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:hintEnabled="true"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/hijau1"
        app:endIconMode="password_toggle"
        app:counterEnabled="true"
        app:counterMaxLength="25">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/hijau1" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:backgroundTint="@color/hijau1"
        android:layout_below="@id/confirmInputLayout"
        android:layout_marginTop="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/registerTextIntent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/hijau1"
            android:fontFamily="@font/poppinsbold"
            android:textSize="14sp"/>

    </LinearLayout>

</RelativeLayout>