<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.DetailHistoryActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:layout_gravity="center"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivHistoryImage"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvHistoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_makanan_hasil_scan"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvKaloriHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/jumlah_kalori"
                android:textSize="16sp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvwaktuHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/waktu_riwayat_scan"
                android:textSize="16sp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvtanggalHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tanggal_history"
                android:textSize="16sp"
                android:layout_marginTop="4dp"/>

        </LinearLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_centerInParent="true" />

    </androidx.cardview.widget.CardView>

</ScrollView>
